<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="droid_desert">Droid Desserts</string>
    <string name="donut_desc">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo_desc">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_order_message">Donut added to cart.</string>
    <string name="ice_cream_order_message">Ice cream sandwich added to cart.</string>
    <string name="froyo_order_message">FroYo added to cart.</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="add_address">Add address</string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="settings">Settings</string>
    <string name="order">Order</string>
    <string name="status">Status</string>
    <string name="contacts">Contacts</string>
    <string name="favourites">Favourites</string>
    <string name="edit_order">Edit Order</string>
    <string name="share_order">Share Order</string>
    <string name="delete_order">Delete Order</string>
    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">"Date"</string>
    <string name="datepicker">DatePicker</string>
</resources>