<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_order"
        android:title="@string/order"
        android:icon = "@drawable/order"
        app:showAsAction="always"/>
    <item
        android:id="@+id/Status"
        android:icon="@drawable/status"
        android:title="@string/status"
        app:showAsAction="always"/>
    <item
        android:id="@+id/contacts"
        android:title="@string/contacts"
        android:orderInCategory="90"/>
    <item
        android:id="@+id/fav"
        android:icon="@drawable/fav"
        app:showAsAction="ifRoom"
        android:title="@string/favourites"/>

</menu>